@@ -77,6 +77,23 @@ function terminated {
 # & KILL will still exit without cleanup.
 trap terminated HUP INT QUIT
 
+# ---------------------------- PRIVILEGE HANDLING ---------------------------- #
+
+# Usage: get_privileges <parameter list>
+# Rerun as root if necessary.
+function get_privileges {
+        if [[ "$install_as_root" == yes ]] && (( $(id -u) != 0 )); then
+                echo "Only root can do this."
+                exec su -c "'$0' $@"
+        fi
+}
+
+# Usage: drop_privileges <parameter list>
+# Rerun as user prometheus.
+function drop_privileges {
+        (( $(id -u) == 0 )) && exec su - prometheus -c "'$0' $@"
+}
+
 # ----------------------------- PIPELINE SUPPORT ----------------------------- #
 
 # Usage: <pipeline> && pipestat
